sort of fixed an issue that was causing the left sidebar to cutoff depending on the height of the right part of the page. for now the solution is to make it scroll if there is overflow.

--- a/app/assets/stylesheets/hiring-panel.css.scss
+++ b/app/assets/stylesheets/hiring-panel.css.scss
@@ -51,6 +51,7 @@ input, textarea, select, button{
     position: fixed;
     background: #424a5d;
     margin-left: 0px;
+    overflow-y: scroll;
 }
 
 #sidebar h5 {
